--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,7 @@
 * {
     font-family:'Times New Roman', Times, serif;
     margin: 0;
-    padding: 0;
-    
+    padding: 0;   
 }
 .icon {
     font-family: 'Font Awesome 5 Free';
@@ -23,14 +22,16 @@
     height: 50px;
     width: auto;
     padding: 10px;
+    z-index: 10;
 }
 .content {
     display: flex;
-    flex-grow: 1;
     flex-direction: column;
+    flex-grow: 1;
     background-color: #387c2b;
     color: #fff;
     padding: 10px;
-    position: static;
+    height: 100vh;
+    max-height: 89vh;
 }
 
